# parsing-game

./: .gitignore  parsing-game.cabal
Haskell/: ParsingGame.hs
Haskell/ParsingGame/: Application.hs  Foreign.hs
Mac/: Info.plist
Mac/Base.lproj/: MainMenu.xib
ObjC/: AppDelegate.h  AppDelegate.m  main.m
Parsing Game.xcodeproj/: project.pbxproj
Parsing Game.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Parsing Game.xcodeproj/project.xcworkspace/xcshareddata/: Parsing Game.xccheckout
